# playground

./: .gitignore  Makefile  README.md  go.mod  go.sum  main.go  playground
agent/: agent.go  entry.go  sender.go  session.go  tcp_client.go  tcp_server.go
backt/: entry.go
bench/: fib_test.go
binary/: entry.go
binary11/: entry.go
cmd/playground/: main.go
cmd/remotelogger/: main.go
cmd/sel/: main.go
config/: playground.toml
cryptonoodle/: rand.go
example/: main.go
example/candy/: main.go  pattern.txt
example/kmp/: main.go
example/regal/: main.go  pattern.txt
example/split/: main.go
internal/abyss/: complex.go  entry.go
internal/agent/: agent.go  session.go  tcp_client.go  tcp_server.go
internal/backt/: entry.go
internal/bench/: fib.go
internal/binary/: entry.go
internal/cfgwatch/: entry.go  root.go
internal/cme/: main.go
internal/concu/: entry.go
internal/image/: entry.go
internal/l337c0d3/: question1.go  question1_test.go  question2.go  question2_test.go  question3.go  question3_test.go  question4.go  question4_test.go
internal/landmine/: entry.go  entry_test.go
internal/meth/: entry.go
js/: ass.js
mnemonic/: entry.go  mnemonic.go  rand.go
rust/rembrandt/: .gitignore  Cargo.toml  LICENSE-MIT
rust/rembrandt/crates/painter/: Cargo.toml
rust/rembrandt/crates/painter/src/: lib.rs
rust/rembrandt/crates/painter/src/tutorials/: chpt01_basic_window.rs  chpt02_surface.rs  chpt03_pipeline.rs  chpt04_buffer.rs  mod.rs
rust/rembrandt/crates/painter/src/tutorials/chpt05_texture/: mod.rs  texture.rs
rust/rembrandt/crates/painter/static/shader/: chpt03.wgsl  chpt03_challenge.wgsl  chpt04.wgsl  chpt05.wgsl
script/: fastrun.sh
scripts/: build.sh
server/: entry.go
timer/: entry.go
(+37 files in other folders)
