[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
debug = false
strip = "debuginfo"
lto = true
opt-level = "s"

[workspace.dependencies]
cgmath = "0.18.0"
env_logger = "0.10.0"
image = "0.24.5"
log = "0.4.17"
pollster = "0.2.5"
wgpu = "0.14.0"
winit = "0.27.5"
bytemuck = { version = "1.12.3", features = ["derive"] }
anyhow = "1.0.66"
cfg-if = "1"
