[package]
name = "painter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "painter"

[dependencies]
winit = { workspace = true }
cgmath = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
cfg-if = { workspace = true }

[dependencies.image]
workspace = true
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
wgpu = { version = "0.14", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

[build-dependencies]
anyhow = { workspace = true }
fs_extra = "1.2"
glob = "0.3"
